Resolved OPL not showing dropdown menu in CRM view

--- a/assets/scss/opl.scss
+++ b/assets/scss/opl.scss
@@ -12,6 +12,10 @@
   font-size: 1em;
 }
 
+.ui-contextmenu {
+  z-index: 125;
+}
+
 .task_actions {
   i {
     cursor: pointer;
